# tyr-agent

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
functions/ai_functions/: bankingagent_history.json  benchmark_stream_response.py  conversation_history.json  convert_image_to_base64.py  gemini_config.py  gemini_manipulation.py  history_storage.py  old_gemini_manipulation.py  weatheragent_history.json  weathersumagent_history.json
functions/storage_functions/: history_storage.py
src/agent_protocol/: __init__.py  main.py
src/agent_protocol/ai_functions/: gemini_manipulation.py
src/agent_protocol/utilities_functions/: convert_image_to_base64.py
src/tyr_agent/: __init__.py  main.py
src/tyr_agent/core/: agent.py  ai_config.py
src/tyr_agent/entities/: entities.py
src/tyr_agent/mixins/: file_mixins.py  gemini_file_mixins.py  gpt_file_mixins.py
src/tyr_agent/models/: gemini_model.py  gpt_model.py
src/tyr_agent/storage/: interaction_history.py
src/tyr_agent/utils/: gpt_function_format_utils.py
